relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_pii_string_rules-26.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@imei:replace|356938035643809": {
    "type": "string",
    "value": "[imei]"
  },
  "_meta": {
    "@imei:replace|356938035643809": {
      "value": {
        "": {
          "rem": [
            [
              "@imei:replace",
              "s",
              0,
              6
            ]
          ],
          "len": 15
        }
      }
    }
  }
}
