relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_pii_string_rules-3.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@ip:remove|127.0.0.1": {
    "type": "string",
    "value": ""
  },
  "_meta": {
    "@ip:remove|127.0.0.1": {
      "value": {
        "": {
          "rem": [
            [
              "@ip:remove",
              "x",
              0,
              0
            ]
          ],
          "len": 9
        }
      }
    }
  }
}
