relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_pii_string_rules-30.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@pemkey:remove|-----BEGIN EC PRIVATE KEY-----\nMIHbAgEBBEFbLvIaAaez3q0u6BQYMHZ28B7iSdMPPaODUMGkdorl3ShgTbYmzqGL\n-----END EC PRIVATE KEY-----": {
    "type": "string",
    "value": "-----BEGIN EC PRIVATE KEY-----\n\n-----END EC PRIVATE KEY-----"
  },
  "_meta": {
    "@pemkey:remove|-----BEGIN EC PRIVATE KEY-----\nMIHbAgEBBEFbLvIaAaez3q0u6BQYMHZ28B7iSdMPPaODUMGkdorl3ShgTbYmzqGL\n-----END EC PRIVATE KEY-----": {
      "value": {
        "": {
          "rem": [
            [
              "@pemkey:remove",
              "x",
              31,
              31
            ]
          ],
          "len": 124
        }
      }
    }
  }
}
