relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_pii_string_rules-32.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@urlauth:replace|https://username:password@example.com/": {
    "type": "string",
    "value": "https://[auth]@example.com/"
  },
  "_meta": {
    "@urlauth:replace|https://username:password@example.com/": {
      "value": {
        "": {
          "rem": [
            [
              "@urlauth:replace",
              "s",
              8,
              14
            ]
          ],
          "len": 38
        }
      }
    }
  }
}
